@@ -9,6 +9,8 @@
 	(CygbuildInstallFixMain): Use `CygbuildInstallFixDocdirInstall'
 	and `CygbuildInstallFixEtcdirInstall'.
 	(CygbuildInstallFixDocdirInstall): Remove empty directories.
+	(CygbuildCmdInstallCheckDirStructure): Check that there are no
+	files in tolevel usr/share usr/lib.
 
 	* etc/template/package.README (Build instructions): Change
 	<PKG>-<VER>-<REL>-src to more generic <PKG>-*-src
